# openglviewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  demo.webm  vcpkg.json
include/: Camera.hpp  EventManager.hpp  Gizmo.hpp  Grid.hpp  Light.hpp  Mesh.hpp  Scene.hpp  SceneDescription.hpp  Shader.hpp  Window.hpp
shaders/: gizmo.frag  gizmo.vert  grid.frag  grid.vert  mesh.frag  mesh.vert
source/: Camera.cpp  EventManager.cpp  Gizmo.cpp  Grid.cpp  Mesh.cpp  Scene.cpp  Shader.cpp  Window.cpp  main.cpp
